--- a/api/v1/spec.yaml
+++ b/api/v1/spec.yaml
@@ -51,6 +51,7 @@ paths:
       tags:
         - event
       description: Add an event to the database
+      summary: Add an event to the database
       requestBody:
         content:
           application/json:
@@ -77,7 +78,8 @@ paths:
           schema:
             type: integer
             example: 1
-      summary: This is a list of the events filtered by a performer
+      summary: This is a list of the events performed by a performer
+      description: This is a list of the events performed by a performer
       responses:
         200:
           description: A list of events
@@ -105,7 +107,8 @@ paths:
           schema:
             type: integer
             example: 1
-      summary: This is a list of the events filtered by a company
+      summary: This is a list of the events performed by a company
+      description: This is a list of the events performed by a company
       responses:
         200:
           description: A list of events
@@ -135,6 +138,7 @@ paths:
             type: string
             example: A01
       summary: This is a list of the events filtered by location
+      description: This is a list of the events filtered by location
       responses:
         200:
           description: A list of events
@@ -164,6 +168,7 @@ paths:
             format: date
             example: 2019-12-12
       summary: This is a list of the events filtered by date
+      description: This is a list of the events filtered by date
       responses:
         200:
           description: A list of events
@@ -191,7 +196,8 @@ paths:
           schema:
             type: integer
             example: 1
-      summary: This is a list of the events filtered by seminar
+      summary: This is a list of the events presented in a seminar
+      description: This is a list of the events presented in a seminar
       responses:
         200:
           description: A list of events
@@ -221,6 +227,7 @@ paths:
             type: string
             example: dance
       summary: This is a list of the events filtered by type
+      description: This is a list of the events filtered by type
       responses:
         200:
           description: A list of events
@@ -246,7 +253,8 @@ paths:
           schema:
             type: integer
             example: 12345
-
+      summary: Get a specific event
+      description: Get a specific event
       responses:
         200:
             description: A list of events
@@ -266,6 +274,8 @@ paths:
       parameters:
         - $ref: '#/components/parameters/PageNumber'
         - $ref: '#/components/parameters/PageSize'
+      summary: This is a list of performer
+      description: This is a list of performer
       responses:
         200:
           description: This is a list of performer
@@ -288,6 +298,8 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Performer'
+      summary: Add a performer to the database
+      description: Add a performer to the database
       responses:
         201:
           description: The performer has been added
@@ -300,7 +312,8 @@ paths:
     get:
       tags: 
         - performer
-      summary: This is a list of the performer filtered by an event
+      summary: This is a list of the event's performers
+      description: This is a list of the event's performers
       parameters:
         - $ref: '#/components/parameters/PageNumber'
         - $ref: '#/components/parameters/PageSize'
@@ -328,7 +341,8 @@ paths:
     get:
       tags: 
         - performer
-      summary: This is a list of the performer filtered by an company
+      summary: This is a list of the performer forming the company
+      description: This is a list of the performer forming the company
       parameters:
         - $ref: '#/components/parameters/PageNumber'
         - $ref: '#/components/parameters/PageSize'
@@ -363,7 +377,8 @@ paths:
           schema:
             type: integer
             example: 12345
-
+      summary: Get a specific performer
+      description: Get a specific performer
       responses:
         200:
           description: This is the performer
