--- a/api/v1/spec.yaml
+++ b/api/v1/spec.yaml
@@ -494,6 +494,35 @@ paths:
           $ref: '#/components/responses/400ValidationError'
         500:
           $ref: '#/components/responses/500ApiError'
+
+  /company/event/{eventId}:
+    get:
+      tags: 
+        - company
+      summary: This is a list of the event's companies
+      description: This is a list of the event's companies
+      parameters:
+        - $ref: '#/components/parameters/PageNumber'
+        - $ref: '#/components/parameters/PageSize'
+        - in: path
+          name: eventId
+          required: true
+          schema:
+            type: integer
+            example: 1
+      responses:
+        200:
+          description: This is a list of company
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CompanyWithId'
+        400:
+          $ref: '#/components/responses/400ValidationError'
+        500:
+          $ref: '#/components/responses/500ApiError'
         
   /company/{companyId}:
     get:
